--- a/paper/gdrn_cvpr2021.bib
+++ b/paper/gdrn_cvpr2021.bib
@@ -1,7 +1,7 @@
-@InProceedings{Wang_2021_CVPR,
-author = {Gu Wang, Fabian Manhardt, Federico Tombari, Xiangyang Ji},
-title = {{GDR-Net: Geometry-Guided Direct Regression Network for Monocular 6D Object Pose Estimation}},
-booktitle = {IEEE/CVF Conference on Computer Vision and Pattern Recognition (CVPR)},
-month = {June},
-year = {2021}
+@InProceedings{Wang_2021_GDRN,
+    title = {{GDR-Net}: Geometry-Guided Direct Regression Network for Monocular 6D Object Pose Estimation},
+    author = {Wang, Gu and Manhardt, Fabian and Tombari, Federico and Ji, Xiangyang},
+    booktitle = {IEEE/CVF Conference on Computer Vision and Pattern Recognition (CVPR)},
+    month = {June},
+    year = {2021}
 }
