--- a/paper/gdrn_cvpr2021.bib
+++ b/paper/gdrn_cvpr2021.bib
@@ -1,7 +1,8 @@
 @InProceedings{Wang_2021_GDRN,
-    title = {{GDR-Net}: Geometry-Guided Direct Regression Network for Monocular 6D Object Pose Estimation},
-    author = {Wang, Gu and Manhardt, Fabian and Tombari, Federico and Ji, Xiangyang},
+    title     = {{GDR-Net}: Geometry-Guided Direct Regression Network for Monocular 6D Object Pose Estimation},
+    author    = {Wang, Gu and Manhardt, Fabian and Tombari, Federico and Ji, Xiangyang},
     booktitle = {IEEE/CVF Conference on Computer Vision and Pattern Recognition (CVPR)},
-    month = {June},
-    year = {2021}
+    month     = {June},
+    year      = {2021},
+    pages     = {16611-16621}
 }
