--- a/paper/self6d_eccv2020.bib
+++ b/paper/self6d_eccv2020.bib
@@ -1,7 +1,7 @@
 @InProceedings{wang2020self6d,
-    title={Self6D: Self-Supervised Monocular 6D Object Pose Estimation},
+    title={{Self6D}: Self-Supervised Monocular 6D Object Pose Estimation},
     author={Wang, Gu and Manhardt, Fabian and Shao, Jianzhun and Ji, Xiangyang and Navab, Nassir and Tombari, Federico},
-    booktitle={The European Conference on Computer Vision (ECCV)},
-    month={August},
-    year={2020}
+    booktitle={European Conference on Computer Vision (ECCV)},
+    year={2020},
+    pages     = {108--125}
 }
