--- a/paper/so_pose_iccv2021.bib
+++ b/paper/so_pose_iccv2021.bib
@@ -3,4 +3,5 @@
     author    = {Di, Yan and Manhardt, Fabian and Wang, Gu and  and Ji, Xiangyang and Navab, Nassir and Tombari, Federico},
     booktitle = {IEEE International Conference on Computer Vision (ICCV)},
     year      = {2021},
+    pages = {12396-12405}
 }
