--- a/paper/deepim_ijcv2019.bib
+++ b/paper/deepim_ijcv2019.bib
@@ -1,8 +1,9 @@
-@article{li2019deepim,
-    title={{DeepIM}: Deep Iterative Matching for 6D Pose Estimation},
-    author={Li, Yi and Wang, Gu and Ji, Xiangyang and Xiang, Yu and Fox, Dieter},
-    journal={International Journal of Computer Vision (IJCV)},
-    pages={1--22},
-    year={2019},
-    publisher={Springer}
+@article{li20deepim_ijcv,
+  author    = {Yi Li and Gu Wang and Xiangyang Ji and Yu Xiang and Dieter Fox},
+  title     = {{DeepIM}: Deep Iterative Matching for 6D Pose Estimation},
+  journal   = {International Journal of Computer Vision (IJCV)},
+  volume    = {128},
+  number    = {3},
+  pages     = {657--678},
+  year      = {2020},
 }
