update paper link

--- a/paper/self6dpp_tpami.bib
+++ b/paper/self6dpp_tpami.bib
@@ -2,5 +2,6 @@
   title     = {Occlusion-Aware Self-Supervised Monocular {6D} Object Pose Estimation},
   author    = {Wang, Gu and Manhardt, Fabian and Liu, Xingyu and Ji, Xiangyang and Tombari, Federico},
   journal   = {IEEE Transactions on Pattern Analysis and Machine Intelligence (TPAMI)},
-  year      = {2021}
+  year      = {2021},
+  doi       = {10.1109/TPAMI.2021.3136301}
 }
